# exp-epa

./: .gitmodules
TypeChecking/: TypeChecker.cs
model/: .gitignore  compile_model.sh  model.dl
model/model_adapter/: Cargo.toml
model/model_adapter/src/: lib.rs
model/model_ddlog/: Cargo.toml  model.dot
model/model_ddlog/src/: build.rs  lib.rs  main.rs
phl/src/: closure.cpp  cwf.cpp
src/: cwf.rs  cwf_model.rs  main.rs  model.rs  type_checker.rs
src/TypeChecking/: Rules.cs
