[package]
name = "model_adapter"
version = "0.1.0"
authors = ["Jakob Botsch Nielsen <Jakob.botsch.nielsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
differential_datalog = {path = "../model_ddlog/differential_datalog"}
libc = "*"
model = {path = "../model_ddlog"}